@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ce1efe58b2bac81b9881c0e00589d54d07a6ccce ChangeLog
+SHA1 b5f06a09b3449549074b3fb9f910ab6bb0f00d38 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 41c0d9c7318c267ae519c071f0d03d46afb5ceea META.yml
-SHA1 3bf649e487144e48d1a3dd01bf89765464daf75e Makefile.PL
+SHA1 14b9ff1605043a0623706ea7c153880700d50f17 META.yml
+SHA1 af0c709f4e6845eaee4fcf25aed7275230ce19cb Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 42cf07eba4ce0d7d7375e3075ad40334c3e2d313 lib/Net/FullAuto.pm
+SHA1 b8bfac2c30c32880764b0f09c38aebec3f6baed2 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTztGwAAoJEBa/9Pad787EO24IAMG+a2fopYCH0UC9TBxW6ZSB
-3lmzp7z3elMDNdAuajp/zjKrsnKkZ4yTO233FdPUP9YIMVI27CninbU44hZ/xf/z
-oZaCQtMjmApHeCKWkyrgeWxJ0B/7bE7RgjOzjoXYNT7MyY1JJ9BRcQ3d6xg9T4lH
-Mxuz39TOdKVpHENx+0VZF2mQ14l+pDVGCgXiHEZnBUS6Y8gI0+PHJnm+jpHA1u/g
-KiSIA6mYN5SPuJ3FsAqaMjKLqGvd3r+eHx6WUa/M6ruThXIbCOBC9tcJzs+psu2F
-380GRZS1JoQhU0Hm3Umz5TUD+X1wln5y/n4ImhLKRdtIcv1PAoY8BVdFy7drtRA=
-=jA4r
+iQEcBAEBAgAGBQJTzzv6AAoJEBa/9Pad787E2sYIANIEz/oArsfiyO3etvqtpDkD
+Pi+QYllZorj2/QzoOPfylcxXN1j4IhLVOSmEdA9KnWYq/NQlFhO5GJoZrsDMvxC5
+ZZFfx5YEdkCLqc8lxCASlggC2mVbNRUr7ZgUOaxJtptf3rimnOEebL1hYLp1maDO
+tWsii1GgH2eIevhHkY9L4wmi1MoYbLBq3FTiH9yGigrlMXhQIwzKEy7HU9d7bMiU
+oTbI1EdfO6gHb7tFbQdDhVC5QJNt1XMtCiKVq6fQE563GTRpbo2QRUhmYcHDqiaJ
+TEQdNl8qJfjh6T11m5lXrdiV+g2dKA/uKJ52eTniGMjUAASSh6Lz3StNvG0U6oY=
+=+27x
 -----END PGP SIGNATURE-----
