@@ -22,6 +22,13 @@
 
 2014-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999972 released.
+
+        * Fixes for FreeBSD.
+
+
+2014-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999971 released.
 
         * Fixes for FreeBSD.
